public/css/main.css
@import url(https://fonts.googleapis.com/css?family=Roboto);

*, *::before, *::after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html, body, #viewport, .ui {
    height: 100%;
    width: 100%;
    margin: 0;
}

body {
    text-align: center;
}

:root {
    --primary-color: rgba(255,255,255,.25);
    --secondary-color: rgba(255,255,255,.4);
    --tertiary-color: rgba(255,255,255,.125);
}

::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
    background-color: rgba(0,0,0,.1);
}

::-webkit-scrollbar-thumb {
    background-color: var(--primary-color);
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.22) inset;
}

#viewport {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    perspective: 500px;
    -webkit-perspective: 500;
    transform-style: preserve-3d;
}

.content {
    box-shadow: 0 0 10px 0 rgba(0,0,0,.4);
    font-family: "Roboto", sans-serif;
}

.content, .pages {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    width: 100%;
}

.page {
    opacity: 1;
    min-height: 100%;
    position: relative;
}

.pages {
    top: 60px;
    overflow-x: hidden;
    overflow-y: auto;
}

.topbar {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;
}

.searchbar {
    position: absolute;
    top: 20px;
    bottom: 20px;
    right: 20px;
    width: calc(100% - 180px);
    max-width: 500px;
}

.ui.searching .topbar .searchbar {
    width: calc(100% - 40px);
    max-width: 100%;
}

.ui.searching .topbar .searchbar input {
    height: 150%;
    font-size: 150%;
    width: 100%;
}

.ui.searching .topbar .searchbar ~ #clock {
    opacity: .3;
}

.ui.searching #sidebarButton {
    opacity: .3;
}

.searchbar input {
    margin: auto;
    width: 300px;
    display: block;
    float: right;
    height: 100%;
    border: 2px solid var(--primary-color);
    background-color: transparent;
    outline: none;
    color: rgba(255,255,255,.8);
    padding: 10px;
    max-width: 100%;
}

.searchbar input:focus {
    width: 100%;
    background-color: rgba(255,255,255,.2);
}

.sbexpand {
    width: 100%;
    margin: auto;
    position: relative;
    height: 100%;
    transition: .2s;
    max-width: 1000px;
}

.ui.searching .topbar .searchbar > .sbexpand {
    /* width: 90% !important; */
    /* max-width: 1000px; */
}

.ui.searching .content .pages, #loadingState:checked ~ .content .pages .page:not(.intransition) {
    transform: translateZ(-200px);
    opacity: .6;
}

.page.example-enter {
    transition: transform .5s;
    transform: translateY(100%);
}

.page.example-enter-active {
    transform: translateY(0%);
}

.page.example-leave {
    transition: transform .5s, opacity .5s;
    transform: translateZ(0px);
    opacity: 1;
}

.page.example-leave-active {
    transform: translateZ(-500px);
    opacity: 0;
}

.ui.open .vertical-centered-box {
    left: calc(-51% + 290px) !important;
}

.vertmid {
    display: inline-block;
    vertical-align: middle;
}

#loadingState:not(:checked) ~ .loader {
    display: none;
}

.loader-circle {
    position: absolute;
    left: 50%;
    top: 50%;
    width: 120px;
    height: 120px;
    border-radius: 50%;
    box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.25);
    margin-left: -60px;
    margin-top: -60px;
}
.loader-line-mask {
    position: absolute;
    left: 50%;
    top: 50%;
    height: 120px;
    width: 60px;
    margin-left: -60px;
    margin-top: -60px;
    overflow: hidden;
    -webkit-transform-origin: 60px 60px;
    -moz-transform-origin: 60px 60px;
    -o-transform-origin: 60px 60px;
    -ms-transform-origin: 60px 60px;
    transform-origin: 60px 60px;
    -webkit-mask-image: -webkit-linear-gradient(top, #000000, rgba(0, 0, 0, 0));
    -webkit-animation: rotate 1.2s infinite linear;
    -moz-animation: rotate 1.2s infinite linear;
    -o-animation: rotate 1.2s infinite linear;
    animation: rotate 1.2s infinite linear;
}
.loader-line-mask .loader-line {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.75);
}

#sidebarButton {
    position: fixed;
    top: 20px;
    left: 20px;
    width: 40px;
    height: 40px;
    z-index: 5;
    background-color: var(--primary-color);
    font-size: 40px;
    line-height: 40px;
    color: white;
    cursor: pointer;
    outline: none;
    -webkit-tap-highlight-color: transparent;
}

.sidebarOpen, .sidebarClose {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    transition: .5s;
}

.ui.open #sidebarButton > .sidebarOpen {
    opacity: 0;
}

.ui.close #sidebarButton > .sidebarClose {
    opacity: 0;
}

.clock {
    position: relative;
    height: 100%;
    width: 100%;
}

#clock {
    position: fixed;
    top: 20px;
    left: 70px;
    height: 40px;
    width: 80px;
    font-size: 25px;
    color: white;
    text-align: center;
    padding: 5px;
    background-color: var(--primary-color);
}

.sidebar {
    position: absolute;
    top: 0;
    left: -290px;
    bottom: 0;
    width: 290px;
//background-color: var(--primary-color);
    background: #2c2d44;
    background-image: -moz-linear-gradient(45deg, #3f3251 2%, #002025 100%);
    background-image: -webkit-linear-gradient(45deg, #3f3251 2%, #002025 100%);
    background-image: linear-gradient(45deg, #3f3251 2%, #002025 100%);
}

.ui.open .sidebar {
    left: 0;
}

.ui.open .content, .ui.open .topbar {
    left: 290px;
//-webkit-filter: blur(10px);
//filter: blur(10px);
}

.ui.open #sidebarButton {
    box-shadow: 0 0 10px 0px rgb(0, 0, 0);
}

.ui.open .topbar #clock {
    width: 200px;
    box-shadow: 0 0 10px 0px rgb(0, 0, 0);
}

.usercount {
    position: absolute;
    top: 70px;
    left: 20px;
    right: 70px;
    height: 40px;
    font-size: 25px;
    color: white;
    background-color: var(--primary-color);
    padding: 5px;
    box-shadow: 0 0 10px 0px rgb(0, 0, 0);
}

.usercount > span {
    color: red;
}
/* ... */

